--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,5 @@ services:
   ubuntu-dev:
     image: tgmti/ubuntu-dev:latest
     build: .
-
+    volumes: 
+      - //var/run/docker.sock:/var/run/docker.sock
